# revistete

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: tito_check_payments.py  tito_demo.py  tito_live.py
src/: config.py  main.py
src/db/: __init__.py  database.py  models.py
src/models/: __init__.py  audio.py  sale_event.py  summary.py  transcription.py
src/services/: __init__.py  sales_extractor.py  summarizer.py  transcriber.py
src/tito/: __init__.py  email_checker.py  live_listener.py  payment_parser.py
