[project]
name = "revistete-stt"
version = "0.1.0"
description = "Speech to text analyzer for long sales recordings"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "openai>=1.12.0",
]

[project.scripts]
revistete = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
