[project]
name = "revistete-stt"
version = "0.1.0"
description = "Speech to text analyzer for long sales recordings"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "faster-whisper>=1.0.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "openai>=1.12.0",
]

[project.scripts]
revistete = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
